<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parent_zoom"
        android:transitionName="@string/trans_other_user_deatail_activity_zoom"
        android:padding="@dimen/_10dp">

        <com.deificindia.indifun.ui.CircleImageView
            android:id="@+id/imgAvtar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/avatar"
            android:transitionName="@string/trans_other_user_deatail_activity_profiles"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:transitionName="@string/trans_other_user_deatail_activity_name"
            android:text="@string/uname"
            android:textStyle="bold"
            style="@style/NameTextView"
            android:paddingStart="@dimen/_10dp"
            android:paddingEnd="@dimen/_10dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_follow"
            app:layout_constraintStart_toEndOf="@+id/imgAvtar"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/tagLay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:transitionName="@string/trans_other_user_deatail_activity_tags"
            android:orientation="horizontal"
            android:padding="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgAvtar"
            app:layout_constraintTop_toBottomOf="@+id/tvName"/>

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10dp"
            android:paddingEnd="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgAvtar"
            app:layout_constraintTop_toBottomOf="@+id/tagLay"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_follow"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30dp"
            android:layout_gravity="center_horizontal"
            android:text="Follow"
            android:textColor="@color/white"
            android:background="@drawable/cisrcular_button_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>