<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.TransferToAccountFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="@dimen/_8dp"
        android:paddingBottom="@dimen/_8dp">

        <ImageView
            android:id="@+id/img_back"
            android:padding="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:contentDescription="@null"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:tint="@color/black" />

        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/txt_header_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20dp"
            android:text="@string/transfer_to_account"
            android:fontFamily="@font/opensans_semibold"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_16dp"
                android:text="@string/transfer_your_earning_to_your_bank_account" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:paddingTop="@dimen/_16dp"
                android:paddingBottom="@dimen/_16dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar1">

                <TextView
                    android:id="@+id/txt_info2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:padding="@dimen/_6dp"
                    android:src="@drawable/coin2"
                    android:text="@string/wallet"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/icon_wallet"
                    android:layout_width="@dimen/_42dp"
                    android:layout_height="@dimen/_42dp"
                    android:layout_below="@+id/txt_info2"
                    android:padding="@dimen/_8dp"
                    android:src="@drawable/ic_dollar"
                    app:layout_constraintEnd_toStartOf="@+id/cash_coin"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_info2" />

                <TextView
                    android:id="@+id/cash_coin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_info2"
                    android:paddingStart="@dimen/_16dp"
                    android:paddingEnd="@dimen/_16dp"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_wallet"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icon_wallet"
                    app:layout_constraintTop_toTopOf="@+id/icon_wallet" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16dp"
                android:layout_marginTop="@dimen/_16dp"
                android:paddingTop="@dimen/_16dp"
                android:paddingBottom="@dimen/_16dp"
                android:background="@color/white"
                android:gravity="center">

                <TextView
                    android:id="@+id/txt_info4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/_6dp"
                    android:text="@string/choose_amount_to_buy_coin"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <!--<com.deificindia.indifun.ui.IncrementalView
                    android:id="@+id/increment_view"
                    android:layout_below="@+id/txt_choose_amount"
                    android:layout_centerHorizontal="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>-->
                <include
                    android:id="@+id/include_increment_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_info4"
                    layout="@layout/layout_increamental_view"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_info3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_16dp"
                    android:textStyle="bold"
                    android:text="@string/bank_details" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:drawablePadding="@dimen/_4dp"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/_16dp"
                    android:paddingEnd="@dimen/_16dp"
                    android:text="Edit"
                    app:drawableStartCompat="@drawable/ic_edit_black_24dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16dp"
                android:background="@color/white"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="* Benificiary Name"
                    android:layout_marginTop="@dimen/_8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_benifiacry_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bank_name"
                    android:layout_marginTop="@dimen/_8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_bank_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bank_account_number"
                    android:layout_marginTop="@dimen/_8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_bank_account"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ifse_code"
                    android:layout_marginTop="@dimen/_8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_ifse"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_24dp"
                android:layout_marginEnd="@dimen/_24dp"
                android:layout_marginStart="@dimen/_24dp"
                android:background="@drawable/bg_button_click_yellow_2"
                android:gravity="center"
                android:enabled="false"
                android:paddingStart="@dimen/_24dp"
                android:paddingTop="@dimen/_12dp"
                android:paddingEnd="@dimen/_24dp"
                android:paddingBottom="@dimen/_12dp"
                android:text="@string/submit_redeem_request"
                android:textAlignment="gravity"
                android:textColor="@color/live_action_button_text_color"
                android:textSize="16sp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>